# LifeSimRustProject

./: Cargo.toml  README.md
legacy/: rule.rs
src/: main.rs
src/components/: life_grid.rs  mod.rs  organism.rs  particle.rs  particle_group.rs  pixel.rs  quadtree_copilot.rs  resource.rs  rule.rs  simulation_grid.rs  tile.rs
