[package]
authors = ["HansNK"]
description = "PLACEHOLDER DESCRIPTION"
edition = "2021"
name = "life_simulator"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
byteorder = "1"
env_logger = "0.10"
error-iter = "0.4"
getrandom = "0.2"
clipline = "0.1.1"
log = "0.4"
pixels = "0.13.0"
randomize = "3"
winit = "0.28"
winit_input_helper = "0.14"
rand = "0.8.5"
pixel_map = "0.3.0"
num-traits = "0.2"
bevy_math = "0.11.3"

[profile.release]
debug = true
